src/test/deca/context/invalid/extension/access-1-dim-with-2.deca
// Programme testant l'accès à un tableau à une dimension avec 2 arguments

{
    int[4] tab;
    tab[1,2] = 4;
}